Fix header position on IE

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,6 +21,7 @@
     justify-content: space-between;
     position: absolute;
     right: 10px;
+    top: 0;
     left: calc(100% - 465px);
 
     .wkp-header-right-bloc {
